# voice-to-text

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml
.cargo/: config.toml
.claude/agents/: audio-agent.md  config-agent.md  inject-agent.md  llm-agent.md  pipeline-agent.md  stt-agent.md  ui-agent.md
docs/: DOCUMENT-ROUTER.md
docs/designs/: INDEX.md  architecture-overview.md  audio-pipeline-design.md  configuration-and-modes.md  llm-correction-design.md  stt-engine-design.md  text-injection-design.md  threading-and-data-flow.md  ui-widget-design.md
docs/git-workflow/: INDEX.md  branching-strategy.md  claude-worktree-workflow.md  commit-conventions.md  multi-agent-workflow.md  pr-workflow.md  release-process.md  run-agent-team.md
docs/plan/: INDEX.md  implementation-plan.md
docs/research/: INDEX.md  comparison-thai-stt.md  implementation-guide.md  llm-post-processing-research.md  papers-and-references.md  research-compilation.md  research-thai-voice-to-text.md  system-requirements.md
src/: app.rs  lib.rs  main.rs
src/audio/: buffer.rs  capture.rs  mod.rs  quality.rs  resample.rs  vad.rs  waveform.rs
src/config/: mod.rs  paths.rs  settings.rs
src/hotkey/: listener.rs  mod.rs
src/inject/: clipboard.rs  keyboard.rs  mod.rs  thai.rs
src/llm/: context.rs  corrector.rs  domain.rs  fallback.rs  mod.rs  prompt.rs  vocabulary.rs
src/pipeline/: mod.rs  runner.rs  state.rs
src/stt/: engine.rs  mod.rs  model.rs  transcribe.rs
